--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -42,6 +42,7 @@ button {
     margin: 16px 0 10px 0;
     font-weight: 500;
     letter-spacing:2px;
+    font-size: 24px;
 }
 
 .category-list {
@@ -52,6 +53,7 @@ button {
     color: #617d98;
     cursor: pointer;
     padding: 4px 0;
+    font-size: 20px;
 }
 
 
