--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,133 +447,18 @@ button.btn.add-to-cart.center {
 }
 
 .modal-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    height: 470px;
-    background-color: #fff;
-    box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
-    padding: 16px;
-    border-radius: 4px;
-
-}
-
-.login-form > h3 {
-    width: 100%;
-    height: 100%;
-    font-size: 30px;
-    color: var(--text-color);
-    margin-bottom: 30px;
-    text-align: center;
-  
-}
-
-.field {
-    position: relative;
-    width: 100%;
-    height: 45px;
+    /* background: #f1f1f1; */
+    min-height: 100vh;
     display: flex;
-}
-.field > span {
-    position: absolute;
-    left: 7px;
-    width: 24px;
-    height: 24px;
-    color: #222;
-    line-height: 48px;
-}
-.field input {
-    height: 100%;
-    width: 100%;
-    border: 1px solid var(--text-color);
-    outline: none;
-    color: #222;
-    font-size: 16px;
-    padding: 24px;
-    border-radius: 4px;
+    justify-content: center;
 }
 
-.space {
-    margin-top: 16px;
-}
 
-.forgot {
-    color: var(--text-color);
-    font-size: 20px;
-    margin: 12px 0;
-    display: inline-block;
-}
-
-.btn-primary {
-    margin: 0;
-    background-color: #3498db;
-    width: 100%;
-    letter-spacing: 2px;
-}
-
-.login {
-    color: var(--text-color);
-    text-align: center;
-    font-size: 18px;
-    margin: 16px 0;
-}
-
-.link {
-    display: flex;
-    cursor: pointer;
-    color: #000;
-    margin-bottom: 20px;
-}
-
-.facebook, .instagram {
-    width: 80%;
-    height: 42px;
-    line-height: 42px;
-    margin-top: 10px;
-    text-align: center;
-    color: #fff;
-}
-
-.facebook {
-    background: #4267B2;
-    border: 1px solid #3e61a8;
-}
-
-.instagram {
-    background: #E1306C;
-    border: 1px solid #df2060;
-}
-
-.facebook:hover, .instagram:hover {
-    opacity: 0.9;
-}
-
-.sign-up {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.sign-up a {
-    color: blue;
-}
-
-.show-btn {
-    position: absolute;
-    right: 13px;
-    top: 12px;
-    cursor: pointer;
-}
-
-.password:valid ~ .show {
-    display: block;
-}
 
 .form-close-btn{
-    position: absolute;
-    top: 21px;
-    right: 17px;
+    position: relative;
+    top: -28px;
+    right: -150px;
     font-size: 26px;
     cursor: pointer;
 }
@@ -591,3 +476,112 @@ button.btn.add-to-cart.center {
     margin-left: 16px;
     padding: 12px 50px;
 }
+
+/* form */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  html {
+    color: #333;
+    font-size: 62.5%;
+    font-family: "Open Sans", sans-serif;
+  }
+  .main {
+    /* background: #f1f1f1; */
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+  }
+  .form {
+    width: 360px;
+    min-height: 100px;
+    padding: 32px 24px;
+    text-align: center;
+    background: #fff;
+    border-radius: 2px;
+    margin: 24px;
+    align-self: center;
+    box-shadow: 0 2px 5px 0 rgba(51, 62, 73, 0.1);
+  }
+  .form .heading {
+    font-size: 2rem;
+  }
+  .form .desc {
+    text-align: center;
+    color: #636d77;
+    font-size: 1.6rem;
+    font-weight: lighter;
+    line-height: 2.4rem;
+    margin-top: 16px;
+    font-weight: 300;
+  }
+  
+  .form-group {
+    display: flex;
+    margin-bottom: 16px;
+    flex-direction: column;
+  }
+  
+  .form-label,
+  .form-message {
+    text-align: left;
+  }
+  
+  .form-label {
+    font-weight: 700;
+    padding-bottom: 6px;
+    line-height: 1.8rem;
+    font-size: 1.4rem;
+  }
+  
+  .form-control {
+    height: 40px;
+    padding: 8px 12px;
+    border: 1px solid #b3b3b3;
+    border-radius: 3px;
+    outline: none;
+    font-size: 1.4rem;
+  }
+  
+  .form-control:hover {
+    border-color: #1dbfaf;
+  }
+  
+  .form-group.invalid .form-control {
+    border-color: #f33a58;
+  }
+  
+  .form-group.invalid .form-message {
+    color: #f33a58;
+  }
+  
+  .form-message {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    padding: 4px 0 0;
+  }
+  
+  .form-submit {
+    outline: none;
+    background-color: #1dbfaf;
+    margin-top: 12px;
+    padding: 12px 16px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .form-submit:hover {
+    background-color: #1ac7b6;
+  }
+  
+  .spacer {
+    margin-top: 36px;
+  }
+  
